--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 </div>
                 <div class="peopleLabels_Text">
                     <p>
-                        70 lat tradycji w projektowaniu
+                        Systemy sterowania ruchem kolejowym
                     </p>
                 </div>
             </div>
@@ -252,7 +252,7 @@
                 </div>
                 <div class="peopleLabels_Text">
                     <p>
-                        70 lat tradycji w projektowaniu
+                        Systemy metra i szybkiego tramwaju
                     </p>
                 </div>
             </div>
@@ -262,7 +262,7 @@
                 </div>
                 <div class="peopleLabels_Text">
                     <p>
-                        70 lat tradycji w projektowaniu
+                        Infrastruktura kolejowa i drogowa
                     </p>
                 </div>
             </div>
@@ -272,7 +272,7 @@
                 </div>
                 <div class="peopleLabels_Text">
                     <p>
-                        70 lat tradycji w projektowaniu
+                        Układy komunikacyjne
                     </p>
                 </div>
             </div>
@@ -282,7 +282,7 @@
                 </div>
                 <div class="peopleLabels_Text">
                     <p>
-                        70 lat tradycji w projektowaniu
+                        Sieci i instalacje wodno-kanalizacyjne
                     </p>
                 </div>
             </div>
@@ -292,7 +292,7 @@
                 </div>
                 <div class="peopleLabels_Text">
                     <p>
-                        70 lat tradycji w projektowaniu
+                        Obiekty inżynierskie
                     </p>
                 </div>
             </div>
@@ -302,7 +302,7 @@
                 </div>
                 <div class="peopleLabels_Text">
                     <p>
-                        70 lat tradycji w projektowaniu
+                        Sieci elektro-energetyczne i automatyki przemysłowej
                     </p>
                 </div>
             </div>
@@ -312,7 +312,7 @@
                 </div>
                 <div class="peopleLabels_Text">
                     <p>
-                        70 lat tradycji w projektowaniu
+                        Inwestorstwo zastępcze, ekspertyzy i opinie techniczne
                     </p>
                 </div>
             </div>
