add management styles

--- a/index.html
+++ b/index.html
@@ -322,20 +322,36 @@
     <!-- Section 05 -->
     <section class="whiteSection" id="zarzad">
         <h1 class="h1right">Zarząd</h1>
-        <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus mollitia, tenetur natus, exercitationem doloremque adipisci cumque rerum, suscipit quaerat labore laboriosam blanditiis! Vitae, maxime impedit sapiente accusamus molestiae dolorum
-            autem. Similique illum at architecto nulla quaerat cumque velit temporibus fugit sed, consectetur impedit error quasi non possimus tempora dolores vel odit suscipit ipsum recusandae expedita, eveniet, repellendus a facilis? Molestiae. Facere,
-            nulla consectetur! Laboriosam, aliquid eos? Eaque laborum voluptas libero corporis, quo dolores magnam possimus nesciunt porro beatae eos molestiae earum aliquid. Praesentium fugit vel fugiat amet quasi, dolor vero. Voluptas nemo ex officiis
-            illum ipsa, magni molestiae non, incidunt dicta expedita repellat dolor. Reprehenderit, porro sit magnam reiciendis est culpa explicabo, eos alias et libero debitis officiis assumenda voluptates? Libero, quam nulla. Suscipit sapiente doloribus
-            officia cumque quaerat in fugit minus eius. Error, accusantium ipsum aperiam distinctio non minima ratione, fugit quaerat facere maxime molestiae ex laborum, laboriosam sit. Corporis cum alias, odit neque architecto veniam. Ullam, doloribus
-            facilis! Inventore dolores ea dolore? Sapiente reprehenderit sequi temporibus qui perspiciatis! Magnam est harum atque quis dicta officia consequuntur delectus quos?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus mollitia,
-            tenetur natus, exercitationem doloremque adipisci cumque rerum, suscipit quaerat labore laboriosam blanditiis! Vitae, maxime impedit sapiente accusamus molestiae dolorum autem. Similique illum at architecto nulla quaerat cumque velit temporibus
-            fugit sed, consectetur impedit error quasi non possimus tempora dolores vel odit suscipit ipsum recusandae expedita, eveniet, repellendus a facilis? Molestiae. Facere, nulla consectetur! Laboriosam, aliquid eos? Eaque laborum voluptas libero
-            corporis, quo dolores magnam possimus nesciunt porro beatae eos molestiae earum aliquid. Praesentium fugit vel fugiat amet quasi, dolor vero. Voluptas nemo ex officiis illum ipsa, magni molestiae non, incidunt dicta expedita repellat dolor.
-            Reprehenderit, porro sit magnam reiciendis est culpa explicabo, eos alias et libero debitis officiis assumenda voluptates? Libero, quam nulla. Suscipit sapiente doloribus officia cumque quaerat in fugit minus eius. Error, accusantium ipsum
-            aperiam distinctio non minima ratione, fugit quaerat facere maxime molestiae ex laborum, laboriosam sit. Corporis cum alias, odit neque architecto veniam. Ullam, doloribus facilis! Inventore dolores ea dolore? Sapiente reprehenderit sequi
-            temporibus qui perspiciatis! Magnam est harum atque quis dicta officia consequuntur delectus quos?
-        </p>
+        <div class="management">
+            <p class="strongName">
+                Prezes:
+            </p>
+            <p class="normalNameFirst">
+                mgr inż. Edmund Całus
+            </p>
+            <p class="strongName">
+                Wiceprezesi:
+            </p>
+            <div class="managementNormalName">
+                <p class="normalName">
+                    mgr inż. Wawrzyniec Wychowański
+                </p>
+                <p class="normalName">
+                    dr inż. Paweł Wontorski
+                </p>
+            </div>
+            <p class="strongName">
+                Prokurenci:
+            </p>
+            <div class="managementNormalName">
+                <p class="normalName">
+                    dr inż. Sławomir Jasiński
+                </p>
+                <p class="normalName">
+                    dr inż. Mariusz Maciejewski
+                </p>
+            </div>
+        </div>
     </section>
 
     <!-- Section 06 -->
