add prizes section template & css

--- a/index.html
+++ b/index.html
@@ -357,20 +357,53 @@
     <!-- Section 06 -->
     <section class="colorSection" id="nagrody_certyfikaty">
         <h1 class="h1left">Nagrody i certyfikaty</h1>
-        <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus mollitia, tenetur natus, exercitationem doloremque adipisci cumque rerum, suscipit quaerat labore laboriosam blanditiis! Vitae, maxime impedit sapiente accusamus molestiae dolorum
-            autem. Similique illum at architecto nulla quaerat cumque velit temporibus fugit sed, consectetur impedit error quasi non possimus tempora dolores vel odit suscipit ipsum recusandae expedita, eveniet, repellendus a facilis? Molestiae. Facere,
-            nulla consectetur! Laboriosam, aliquid eos? Eaque laborum voluptas libero corporis, quo dolores magnam possimus nesciunt porro beatae eos molestiae earum aliquid. Praesentium fugit vel fugiat amet quasi, dolor vero. Voluptas nemo ex officiis
-            illum ipsa, magni molestiae non, incidunt dicta expedita repellat dolor. Reprehenderit, porro sit magnam reiciendis est culpa explicabo, eos alias et libero debitis officiis assumenda voluptates? Libero, quam nulla. Suscipit sapiente doloribus
-            officia cumque quaerat in fugit minus eius. Error, accusantium ipsum aperiam distinctio non minima ratione, fugit quaerat facere maxime molestiae ex laborum, laboriosam sit. Corporis cum alias, odit neque architecto veniam. Ullam, doloribus
-            facilis! Inventore dolores ea dolore? Sapiente reprehenderit sequi temporibus qui perspiciatis! Magnam est harum atque quis dicta officia consequuntur delectus quos?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus mollitia,
-            tenetur natus, exercitationem doloremque adipisci cumque rerum, suscipit quaerat labore laboriosam blanditiis! Vitae, maxime impedit sapiente accusamus molestiae dolorum autem. Similique illum at architecto nulla quaerat cumque velit temporibus
-            fugit sed, consectetur impedit error quasi non possimus tempora dolores vel odit suscipit ipsum recusandae expedita, eveniet, repellendus a facilis? Molestiae. Facere, nulla consectetur! Laboriosam, aliquid eos? Eaque laborum voluptas libero
-            corporis, quo dolores magnam possimus nesciunt porro beatae eos molestiae earum aliquid. Praesentium fugit vel fugiat amet quasi, dolor vero. Voluptas nemo ex officiis illum ipsa, magni molestiae non, incidunt dicta expedita repellat dolor.
-            Reprehenderit, porro sit magnam reiciendis est culpa explicabo, eos alias et libero debitis officiis assumenda voluptates? Libero, quam nulla. Suscipit sapiente doloribus officia cumque quaerat in fugit minus eius. Error, accusantium ipsum
-            aperiam distinctio non minima ratione, fugit quaerat facere maxime molestiae ex laborum, laboriosam sit. Corporis cum alias, odit neque architecto veniam. Ullam, doloribus facilis! Inventore dolores ea dolore? Sapiente reprehenderit sequi
-            temporibus qui perspiciatis! Magnam est harum atque quis dicta officia consequuntur delectus quos?
-        </p>
+        <div class="rightsmallpdiv">
+            <p>
+                Od 70-ciu lat dokładamy wszelkich starań, aby dostarczać naszym klientom skuteczne rozwiązania na światowym poziomie oraz usługi najwyżej jakości czego odzwierciedleniem są m.in. trzy wyróżnienia, które otrzymaliśmy za nasze zasługi dla rozwoju Warszawy
+                oraz budownictwa.
+            </p>
+        </div>
+        <div class="prizeLabels">
+            <div class="prizeitem">
+                <div class="prizeLabels_Text">
+                    <p><strong>
+                        Medal "IV Wieki Stołeczności Warszawy"
+                    </strong></p>
+                    <p>
+                        W 1996 roku, z okazji jubileuszu czterechsetlecia stołeczności Warszawy zostaliśmy uhonorowani medalem pamiątkowym za nasz wieloletni wkład w rozwój stolicy.
+                    </p>
+                </div>
+                <div class="prizecontainerLabels_Img">
+                    <img src="/img/medal1.png" alt="" width="140px">
+                </div>
+            </div>
+            <div class="prizeitem">
+                <div class="prizeLabels_Text">
+                    <p><strong>
+                        Wyróżnienie "Zasłużony dla Warszawy"
+                    </strong></p>
+                    <p>
+                        Otrzymaliśmy wyróżnienie, które przyznawane jest osobom fizycznym oraz jednostkom organizacyjnym wyróżniającym się działalnością na rzecz Warszawy, w szczególności w sferze społecznej, naukowej i edukacyjnej.
+                    </p>
+                </div>
+                <div class="prizecontainerLabels_Img">
+                    <img src="/img/medal2.png" alt="" width="140px">
+                </div>
+            </div>
+            <div class="prizeitem">
+                <div class="prizeLabels_Text">
+                    <p><strong>
+                        "Zasłuzony dla Budownicwa i Przemysłu Materiałów Budowalnych"
+                    </strong></p>
+                    <p>
+                        Ortzymaliśmy odznaczenie nadawane przez Ministra Budownictwa i Przemysłu Materiałów Budowalnych, w uznaniu za naszą wieloletnią, aktywną pracę zawodową i działalność oraz zasługi dla rozwoju budownictwa i przemysłu materiałów budowlanych.
+                    </p>
+                </div>
+                <div class="prizecontainerLabels_Img">
+                    <img src="/img/medal3.png" alt="" width="140px">
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Footer -->
