--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="containerLabels">
             <div class="citem">
                 <div class="containerLabels_Img">
-                    <img src="/icons/20210326_BPM-61.png" alt="" width="100px">
+                    <img src="./icons/20210326_BPM-61.png" alt="" width="100px">
                 </div>
                 <div class="containerLabels_Text">
                     <p>
@@ -140,7 +140,7 @@
             </div>
             <div class="citem">
                 <div class="containerLabels_Img">
-                    <img src="/icons/20210326_BPM-61.png" alt="" width="100px">
+                    <img src="./icons/20210326_BPM-61.png" alt="" width="100px">
                 </div>
                 <div class="containerLabels_Text">
                     <p>
@@ -150,7 +150,7 @@
             </div>
             <div class="citem">
                 <div class="containerLabels_Img">
-                    <img src="/icons/20210326_BPM-61.png" alt="" width="100px">
+                    <img src="./icons/20210326_BPM-61.png" alt="" width="100px">
                 </div>
                 <div class="containerLabels_Text">
                     <p>
@@ -160,7 +160,7 @@
             </div>
             <div class="citem">
                 <div class="containerLabels_Img">
-                    <img src="/icons/20210326_BPM-61.png" alt="" width="100px">
+                    <img src="./icons/20210326_BPM-61.png" alt="" width="100px">
                 </div>
                 <div class="containerLabels_Text">
                     <p>
@@ -170,7 +170,7 @@
             </div>
             <div class="citem">
                 <div class="containerLabels_Img">
-                    <img src="/icons/20210326_BPM-61.png" alt="" width="100px">
+                    <img src="./icons/20210326_BPM-61.png" alt="" width="100px">
                 </div>
                 <div class="containerLabels_Text">
                     <p>
@@ -180,7 +180,7 @@
             </div>
             <div class="citem">
                 <div class="containerLabels_Img">
-                    <img src="/icons/20210326_BPM-61.png" alt="" width="100px">
+                    <img src="./icons/20210326_BPM-61.png" alt="" width="100px">
                 </div>
                 <div class="containerLabels_Text">
                     <p>
@@ -238,7 +238,7 @@
         <div class="peopleLabels">
             <div class="peopleitem">
                 <div class="peoplecontainerLabels_Img">
-                    <img src="/icons/20210326_BPM-62.png" alt="" width="140px">
+                    <img src="./icons/20210326_BPM-62.png" alt="" width="140px">
                 </div>
                 <div class="peopleLabels_Text">
                     <p>
@@ -248,7 +248,7 @@
             </div>
             <div class="peopleitem">
                 <div class="peoplecontainerLabels_Img">
-                    <img src="/icons/20210326_BPM-63.png" alt="" width="140px">
+                    <img src="./icons/20210326_BPM-63.png" alt="" width="140px">
                 </div>
                 <div class="peopleLabels_Text">
                     <p>
@@ -258,7 +258,7 @@
             </div>
             <div class="peopleitem">
                 <div class="peoplecontainerLabels_Img">
-                    <img src="/icons/20210326_BPM-64.png" alt="" width="140px">
+                    <img src="./icons/20210326_BPM-64.png" alt="" width="140px">
                 </div>
                 <div class="peopleLabels_Text">
                     <p>
@@ -268,7 +268,7 @@
             </div>
             <div class="peopleitem">
                 <div class="peoplecontainerLabels_Img">
-                    <img src="/icons/20210326_BPM-65.png" alt="" width="140px">
+                    <img src="./icons/20210326_BPM-65.png" alt="" width="140px">
                 </div>
                 <div class="peopleLabels_Text">
                     <p>
@@ -278,7 +278,7 @@
             </div>
             <div class="peopleitem">
                 <div class="peoplecontainerLabels_Img">
-                    <img src="/icons/20210326_BPM-66.png" alt="" width="140px">
+                    <img src="./icons/20210326_BPM-66.png" alt="" width="140px">
                 </div>
                 <div class="peopleLabels_Text">
                     <p>
@@ -288,7 +288,7 @@
             </div>
             <div class="peopleitem">
                 <div class="peoplecontainerLabels_Img">
-                    <img src="/icons/20210326_BPM-67.png" alt="" width="140px">
+                    <img src="./icons/20210326_BPM-67.png" alt="" width="140px">
                 </div>
                 <div class="peopleLabels_Text">
                     <p>
@@ -298,7 +298,7 @@
             </div>
             <div class="peopleitem">
                 <div class="peoplecontainerLabels_Img">
-                    <img src="/icons/20210326_BPM-68.png" alt="" width="140px">
+                    <img src="./icons/20210326_BPM-68.png" alt="" width="140px">
                 </div>
                 <div class="peopleLabels_Text">
                     <p>
@@ -308,7 +308,7 @@
             </div>
             <div class="peopleitem">
                 <div class="peoplecontainerLabels_Img">
-                    <img src="/icons/20210326_BPM-69.png" alt="" width="140px">
+                    <img src="./icons/20210326_BPM-69.png" alt="" width="140px">
                 </div>
                 <div class="peopleLabels_Text">
                     <p>
@@ -374,7 +374,7 @@
                     </p>
                 </div>
                 <div class="prizecontainerLabels_Img">
-                    <img src="/img/medal1.png" alt="" width="140px">
+                    <img src="./img/medal1.png" alt="" width="140px">
                 </div>
             </div>
             <div class="prizeitem">
@@ -387,7 +387,7 @@
                     </p>
                 </div>
                 <div class="prizecontainerLabels_Img">
-                    <img src="/img/medal2.png" alt="" width="140px">
+                    <img src="./img/medal2.png" alt="" width="140px">
                 </div>
             </div>
             <div class="prizeitem">
@@ -400,7 +400,7 @@
                     </p>
                 </div>
                 <div class="prizecontainerLabels_Img">
-                    <img src="/img/medal3.png" alt="" width="140px">
+                    <img src="./img/medal3.png" alt="" width="140px">
                 </div>
             </div>
         </div>
