add new hover & links css

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
     <!-- Section 02 -->
     <section class="colorSection" id="co_nas_wyroznia">
-        <h1 class="h1right">Co nas wyróżnia</h1>
+        <h1 class="h1left">Co nas wyróżnia</h1>
         <div class="containerLabels">
             <div class="citem">
                 <div class="containerLabels_Img">
@@ -193,7 +193,7 @@
 
     <!-- Section 03 -->
     <section class="whiteSection" id="historia_firmy">
-        <h1 class="h1right">Historia firmy</h1>
+        <h1 class="h1left">Historia firmy</h1>
         <div class="historySection">
             <div class="historySection--col">
                 <p>
@@ -237,91 +237,108 @@
         </div>
         <div class="peopleLabels">
             <div class="peopleitem">
-                <div class="peoplecontainerLabels_Img">
-                    <img src="./icons/20210326_BPM-62.png" alt="" width="140px">
-                </div>
-                <div class="peopleLabels_Text">
-                    <p>
-                        Systemy sterowania ruchem kolejowym
-                    </p>
-                </div>
+                <a href="systemy-sterowania-ruchem-kolejowym.html">
+                    <div class="peoplecontainerLabels_Img">
+                        <img src="./icons/20210326_BPM-64.png" alt="" width="140px">
+                    </div>
+                    <div class="peopleLabels_Text">
+                        <p>
+                            Systemy sterowania ruchem kolejowym
+                        </p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="peopleitem">
+                <a href="systemy-metra-i-szybkiego-tramwaju.html">
+                    <div class="peoplecontainerLabels_Img">
+                        <img src="./icons/20210326_BPM-63.png" alt="" width="140px">
+                    </div>
+                    <div class="peopleLabels_Text">
+                        <p>
+                            Systemy metra i szybkiego tramwaju
+                        </p>
+                    </div>
+                </a>
             </div>
             <div class="peopleitem">
-                <div class="peoplecontainerLabels_Img">
-                    <img src="./icons/20210326_BPM-63.png" alt="" width="140px">
-                </div>
-                <div class="peopleLabels_Text">
-                    <p>
-                        Systemy metra i szybkiego tramwaju
-                    </p>
-                </div>
+                <a href="infrastruktura-kolejowa-i-drogowa.html">
+                    <div class="peoplecontainerLabels_Img">
+                        <img src="./icons/20210326_BPM-62.png" alt="" width="140px">
+                    </div>
+                    <div class="peopleLabels_Text">
+                        <p>
+                            Infrastruktura kolejowa i drogowa
+                        </p>
+                    </div>
+                </a>
             </div>
             <div class="peopleitem">
-                <div class="peoplecontainerLabels_Img">
-                    <img src="./icons/20210326_BPM-64.png" alt="" width="140px">
-                </div>
-                <div class="peopleLabels_Text">
-                    <p>
-                        Infrastruktura kolejowa i drogowa
-                    </p>
-                </div>
+                <a href="uklady-komunikacyjne.html">
+                    <div class="peoplecontainerLabels_Img">
+                        <img src="./icons/20210326_BPM-65.png" alt="" width="140px">
+                    </div>
+                    <div class="peopleLabels_Text">
+                        <p>
+                            Układy komunikacyjne
+                        </p>
+                    </div>
+                </a>
             </div>
             <div class="peopleitem">
-                <div class="peoplecontainerLabels_Img">
-                    <img src="./icons/20210326_BPM-65.png" alt="" width="140px">
-                </div>
-                <div class="peopleLabels_Text">
-                    <p>
-                        Układy komunikacyjne
-                    </p>
-                </div>
+                <a href="sieci-i-instalacje-wodnokanalizacyjne.html">
+                    <div class="peoplecontainerLabels_Img">
+                        <img src="./icons/20210326_BPM-68.png" alt="" width="140px">
+                    </div>
+                    <div class="peopleLabels_Text">
+                        <p>
+                            Sieci i instalacje wodno-kanalizacyjne
+                        </p>
+                    </div>
+                </a>
             </div>
             <div class="peopleitem">
-                <div class="peoplecontainerLabels_Img">
-                    <img src="./icons/20210326_BPM-66.png" alt="" width="140px">
-                </div>
-                <div class="peopleLabels_Text">
-                    <p>
-                        Sieci i instalacje wodno-kanalizacyjne
-                    </p>
-                </div>
+                <a href="konstrukcje-budowlane-i-inzynierskie.html">
+                    <div class="peoplecontainerLabels_Img">
+                        <img src="./icons/20210326_BPM-66.png" alt="" width="140px">
+                    </div>
+                    <div class="peopleLabels_Text">
+                        <p>
+                            Obiekty inżynierskie
+                        </p>
+                    </div>
+                </a>
             </div>
             <div class="peopleitem">
-                <div class="peoplecontainerLabels_Img">
-                    <img src="./icons/20210326_BPM-67.png" alt="" width="140px">
-                </div>
-                <div class="peopleLabels_Text">
-                    <p>
-                        Obiekty inżynierskie
-                    </p>
-                </div>
+                <a href="sieci-i-instalacje-elektroenergetyczne.html">
+                    <div class="peoplecontainerLabels_Img">
+                        <img src="./icons/20210326_BPM-67.png" alt="" width="140px">
+                    </div>
+                    <div class="peopleLabels_Text">
+                        <p>
+                            Sieci elektro-energetyczne i automatyki przemysłowej
+                        </p>
+                    </div>
+                </a>
             </div>
             <div class="peopleitem">
-                <div class="peoplecontainerLabels_Img">
-                    <img src="./icons/20210326_BPM-68.png" alt="" width="140px">
-                </div>
-                <div class="peopleLabels_Text">
-                    <p>
-                        Sieci elektro-energetyczne i automatyki przemysłowej
-                    </p>
-                </div>
-            </div>
-            <div class="peopleitem">
-                <div class="peoplecontainerLabels_Img">
-                    <img src="./icons/20210326_BPM-69.png" alt="" width="140px">
-                </div>
-                <div class="peopleLabels_Text">
-                    <p>
-                        Inwestorstwo zastępcze, ekspertyzy i opinie techniczne
-                    </p>
-                </div>
+                <a href="inwestorstwo-zastepcze-ekspertyzy.html">
+                    <div class="peoplecontainerLabels_Img">
+                        <img src="./icons/20210326_BPM-69.png" alt="" width="140px">
+                    </div>
+                    <div class="peopleLabels_Text">
+                        <p>
+                            Inwestorstwo zastępcze, ekspertyzy i opinie techniczne
+                        </p>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
 
     <!-- Section 05 -->
     <section class="whiteSection" id="zarzad">
-        <h1 class="h1right">Zarząd</h1>
+        <h1 class="h1left">Zarząd</h1>
         <div class="management">
             <p class="strongName">
                 Prezes:
@@ -334,7 +351,7 @@
             </p>
             <div class="managementNormalName">
                 <p class="normalName">
-                    mgr inż. Wawrzyniec Wychowański
+                    dr inż. Wawrzyniec Wychowański
                 </p>
                 <p class="normalName">
                     dr inż. Paweł Wontorski
