job section update html & css

--- a/dolacz-do-nas.html
+++ b/dolacz-do-nas.html
@@ -86,46 +86,22 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg h1OverImgLarge"><span>Dołącz do nas</span></h1>
+        <h1 class="h1OverImgLarge"><span>Dołącz do nas</span></h1>
     </header>
 
     <!-- Section 01 -->
-    <section class="whiteSection" id="firstId">
-        <h1>Tekst Tekst Tekst</h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem impedit iusto velit quidem ipsam sed. Modi doloremque perspiciatis animi id, ratione similique aperiam architecto officiis quasi quis consequuntur dicta? Enim similique consequatur officia
-            consequuntur eligendi facere veritatis quis ut soluta aperiam esse exercitationem fugit, non placeat, fugiat sint aliquam voluptatum, cupiditate illum. Expedita quam optio debitis quidem ad dolorum? Aut, modi voluptas vitae doloribus quod
-            provident alias saepe odio tempora et doloremque vel laborum optio dolores id amet recusandae aspernatur. Minima vitae, nulla quae sapiente beatae excepturi? Illo, vitae? Iure sit minus odit accusamus quasi amet saepe libero sapiente vero
-            assumenda ratione, temporibus culpa labore quo adipisci tempora pariatur animi ipsum enim, error vitae, quia alias aliquid. Cupiditate, consectetur! Dignissimos eos dolorem nulla, amet dicta dolor inventore maiores deserunt doloribus, totam
-            modi eligendi magnam iste voluptas? Optio soluta quidem autem maiores repudiandae nulla, debitis possimus at dolorum! Minus, sint. Deserunt assumenda tenetur error vel nulla vitae ex odio iusto molestiae corrupti. Autem magnam esse rerum nesciunt
-            consectetur, error minus asperiores debitis praesentium, iusto nihil, culpa id suscipit cupiditate natus.
-        </p>
-    </section>
-
-    <!-- Section 02 -->
-    <section class="colorSection">
-        <h2>Tekst Tekst Tekst</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem impedit iusto velit quidem ipsam sed. Modi doloremque perspiciatis animi id, ratione similique aperiam architecto officiis quasi quis consequuntur dicta? Enim similique consequatur officia
-            consequuntur eligendi facere veritatis quis ut soluta aperiam esse exercitationem fugit, non placeat, fugiat sint aliquam voluptatum, cupiditate illum. Expedita quam optio debitis quidem ad dolorum? Aut, modi voluptas vitae doloribus quod
-            provident alias saepe odio tempora et doloremque vel laborum optio dolores id amet recusandae aspernatur. Minima vitae, nulla quae sapiente beatae excepturi? Illo, vitae? Iure sit minus odit accusamus quasi amet saepe libero sapiente vero
-            assumenda ratione, temporibus culpa labore quo adipisci tempora pariatur animi ipsum enim, error vitae, quia alias aliquid. Cupiditate, consectetur! Dignissimos eos dolorem nulla, amet dicta dolor inventore maiores deserunt doloribus, totam
-            modi eligendi magnam iste voluptas? Optio soluta quidem autem maiores repudiandae nulla, debitis possimus at dolorum! Minus, sint. Deserunt assumenda tenetur error vel nulla vitae ex odio iusto molestiae corrupti. Autem magnam esse rerum nesciunt
-            consectetur, error minus asperiores debitis praesentium, iusto nihil, culpa id suscipit cupiditate natus.
-        </p>
-    </section>
-
-    <!-- Section 03 -->
     <section class="whiteSection">
-        <h2>Tekst Tekst Tekst</h2>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem impedit iusto velit quidem ipsam sed. Modi doloremque perspiciatis animi id, ratione similique aperiam architecto officiis quasi quis consequuntur dicta? Enim similique consequatur officia
-            consequuntur eligendi facere veritatis quis ut soluta aperiam esse exercitationem fugit, non placeat, fugiat sint aliquam voluptatum, cupiditate illum. Expedita quam optio debitis quidem ad dolorum? Aut, modi voluptas vitae doloribus quod
-            provident alias saepe odio tempora et doloremque vel laborum optio dolores id amet recusandae aspernatur. Minima vitae, nulla quae sapiente beatae excepturi? Illo, vitae? Iure sit minus odit accusamus quasi amet saepe libero sapiente vero
-            assumenda ratione, temporibus culpa labore quo adipisci tempora pariatur animi ipsum enim, error vitae, quia alias aliquid. Cupiditate, consectetur! Dignissimos eos dolorem nulla, amet dicta dolor inventore maiores deserunt doloribus, totam
-            modi eligendi magnam iste voluptas? Optio soluta quidem autem maiores repudiandae nulla, debitis possimus at dolorum! Minus, sint. Deserunt assumenda tenetur error vel nulla vitae ex odio iusto molestiae corrupti. Autem magnam esse rerum nesciunt
-            consectetur, error minus asperiores debitis praesentium, iusto nihil, culpa id suscipit cupiditate natus.
+            Biuro Projektów "Metroprojekt" powiększa swój zespół projektantów, asystentów i specjalistów w różnych branżach. Jeśli poszukujesz ciekawej pracy, ambitnych wyzwań i projektów w obszarach najnowocześniejszych technologii - dołącz do naszego zespołu! Oferujemy
+            stabilne warunki pracy, możliwość rozwoju i zdobywania unikalnego doświadczenia w wielobranżowym biurze projektowym. Zależy nam na wytrwałości, konsekwencji i zespołowym działaniu w dążeniu do wyznaczonych przez nas celów.
         </p>
+        <p>
+            Zapraszamy do aplikowania także osoby bezpośrednio po studiach technicznych lub na ostatnich latach studiów - oferujemy płatne praktyki i staże.
+        </p>
+        <p>
+            Jeśli nie znajdziesz aktualnej oferty pracy dla Ciebie - napisz do nas i prześlij swoje CV.
+        </p>
+        <a class="button01" href="oferty-pracy.html">Oferty pracy</a>
     </section>
 
     <!-- Footer -->
